<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    android:background="@color/background" 
    android:gravity="center"
    android:padding="30dip" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_title" 
        android:layout_marginBottom="25dip"
        android:textSize="24.5sp"/>
    
    <!-- 
    <Button
        android:id="@+id/button_browse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_browse" />
    
    <Button
        android:id="@+id/button_browse_deluxe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_browse_deluxe" />
     -->
     
    <Button
        android:id="@+id/button_search_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_search_title" />
    
    <Button
        android:id="@+id/button_about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_button_about" />
    
</LinearLayout>
